--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>MoGo</title>
@@ -51,8 +52,298 @@
             <i class="fas fa-circle"></i>
         </div>
     </div>
-
+    <div class="clr"></div>
     <!-- cover end  -->
+    <!-- about start  -->
+    <div class="full-wrapper about-bg">
+        <div class="container about">
+            <div class="section-head">
+                <h4><span>w</span>hat we do</h4>
+            </div>
+            <h2>story about us</h2>
+            <div class="clr"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. </p>
+            <div class="about-gallery">
+                <div class="images-items">
+                    <img src="images/mogo-about-computer.jpg" alt="mogo-about-computer">
+                    <div class="user-icon">
+                        <i class="fas fa-user-friends"></i>
+                        <h3>super team</h3>
+                    </div>
+                </div>
+
+                <div class="images-items">
+                    <img src="images/mogo-about-mobile.jpg" alt="mogo-about-computer">
+                    <div class="user-icon">
+                        <i class="fas fa-user-friends"></i>
+                        <h3>super team</h3>
+                    </div>
+                </div>
+
+                <div class="images-items">
+                    <img src="images/mogo-about-table.jpg" alt="mogo-about-computer">
+                    <div class="user-icon">
+                        <i class="fas fa-user-friends"></i>
+                        <h3>super team</h3>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="clr"></div>
+    <!-- about end -->
+    <!-- award start -->
+    <div class="full-wrapper award-bg">
+        <div class="container award">
+            <div class="award-items">
+                <h4>42</h4>
+                <p>web design project</p>
+            </div>
+            <div class="award-items">
+                <h4>123</h4>
+                <p>happy client</p>
+            </div>
+            <div class="award-items">
+                <h4>15</h4>
+                <p>award winner</p>
+            </div>
+            <div class="award-items">
+                <h4>99</h4>
+                <p>cup of coffee</p>
+            </div>
+            <div class="award-items">
+                <h4>24</h4>
+                <p>members</p>
+            </div>
+        </div>
+    </div>
+    <div class="clr"></div>
+    <!-- award end -->
+    <!-- service start -->
+    <div class="full-wrapper service-bg">
+        <div class="container service">
+            <div class="section-head">
+                <h4><span>w</span>e work with</h4>
+            </div>
+            <h2>awazing service</h2>
+            <div class="service-items">
+                <div class="service-section-1">
+                    <div class="service-logo">
+                        <img src="images/photography.png" alt="photography">
+                    </div>
+                    <div class="service-content">
+                        <h4>photoghraphy</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
+                </div>
+                <div class="service-section-1">
+                    <div class="service-logo">
+                        <img src="images/web-design.png" alt="photography">
+                    </div>
+                    <div class="service-content">
+                        <h4>photoghraphy</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
+                </div>
+                <div class="service-section-1">
+                    <div class="service-logo">
+                        <img src="images/creativity.png" alt="photography">
+                    </div>
+                    <div class="service-content">
+                        <h4>photoghraphy</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
+                </div>
+                <div class="service-section-2">
+                    <div class="service-logo">
+                        <img src="images/seo.png" alt="photography">
+                    </div>
+                    <div class="service-content">
+                        <h4>photoghraphy</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
+                </div>
+                <div class="service-section-2">
+                    <div class="service-logo">
+                        <img src="images/html.png" alt="photography">
+                    </div>
+                    <div class="service-content">
+                        <h4>photoghraphy</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
+                </div>
+                <div class="service-section-2">
+                    <div class="service-logo">
+                        <img src="images/digital.png" alt="photography">
+                    </div>
+                    <div class="service-content">
+                        <h4>photoghraphy</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="clr"></div>
+    <!-- servise end -->
+
+    <!-- unic design start -->
+    <div class="full-wrapper unic-bg">
+        <div class="container unic">
+            <div class="section-head">
+                <h4><span>f</span>or all devices</h4>
+            </div>
+            <h2>unique design</h2>
+            <div class="devices">
+                <div class="devices-items">
+                    <img src="images/tab.png" alt="design">
+                </div>
+                <div class="devices-items">
+                    <img src="images/mobi.png" class="mobi" alt="design">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="clr"></div>
+    <!-- unic design end -->
+
+    <!-- wedo strat  -->
+    <div class="full-wrapper wedo-bg">
+        <div class="container wedo">
+            <div class="section-head">
+                <h4><span>f</span>or all devices</h4>
+            </div>
+            <h2>what we do</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.
+            </p>
+            <div class="wedo-items">
+                <div class="wedo-img">
+                    <img src="images/we-do.jpg" alt="">
+                </div>
+                <div class="wedo-text">
+                    <div class="photography">
+                        <img src="images/photography-2.png" alt="">
+                        <h4>photography</h4>
+                        <i class="fas fa-chevron-up"></i>
+                    </div>
+                    <div class="photography-text">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                    <div class="photography">
+                        <img src="images/photography-2.png" alt="">
+                        <h4>photography</h4>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="photography">
+                        <img src="images/photography-2.png" alt="">
+                        <h4>photography</h4>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="clr"></div>
+
+    <!-- wedo end  -->
+    <!-- jon doe start  -->
+    <div class="full-wrapper jon-bg">
+
+        <div class="container jon">
+            <div class="jon-logo">
+                <img src="images/jon-logo.png" alt="jon-logo">
+            </div>
+            <div class="jon-text">
+                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+                </p>
+                <h4>jon doe</h4>
+            </div>
+            <div class="mark-icon">
+                <i class="fas fa-chevron-right right-mark"></i>
+                <i class="fas fa-chevron-left left-mark"></i>
+            </div>
+        </div>
+    </div>
+    <div class="clr"></div>
+    <!-- jon doe end  -->
+    <!-- our team start  -->
+    <div class="full-wrapper team-bg">
+        <div class="container team">
+            <div class="section-head">
+                <h4><span>w</span>ho we are</h4>
+            </div>
+            <h2>meet our team</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.
+            </p>
+            <div class="team-gallery">
+                <div class="gallery-items">
+                    <img src="images/our-team-picture-1.jpg" alt="our-team-picture">
+                    <div class="gallery-overlay">
+                        <ul>
+                            <li>
+                                <i class="fab fa-facebook-f"></i>
+                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-pinterest-p"></i>
+                                <i class="fab fa-instagram"></i>
+                            </li>
+                        </ul>
+                    </div>
+                    <h4>Matthew Dix</h4>
+                    <p>Graphic Design</p>
+                </div>
+
+                <div class="gallery-items">
+                    <img src="images/our-team-picture-2.jpg" alt="our-team-picture">
+                    <div class="gallery-overlay">
+                        <ul>
+                            <li>
+                                <i class="fab fa-facebook-f"></i>
+                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-pinterest-p"></i>
+                                <i class="fab fa-instagram"></i>
+                            </li>
+                        </ul>
+                    </div>
+                    <h4>Christopher Campbell</h4>
+                    <p>Branding/UX design</p>
+                </div>
+
+                <div class="gallery-items">
+                    <img src="images/our-team-picture-3.jpg" alt="our-team-picture">
+                    <div class="gallery-overlay">
+                        <ul>
+                            <li>
+                                <i class="fab fa-facebook-f"></i>
+                                <i class="fab fa-twitter"></i>
+                                <i class="fab fa-pinterest-p"></i>
+                                <i class="fab fa-instagram"></i>
+                            </li>
+                        </ul>
+                    </div>
+                    <h4>Michael Fertig </h4>
+                    <p>Developer</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="clr"></div>
+    <!-- our team end  -->
+    <div class="full-wrapper brand-bg">
+        <div class="container brand"></div>
+    </div>
 
 </body>
 
