--- a/index.html
+++ b/index.html
@@ -341,9 +341,320 @@
     </div>
     <div class="clr"></div>
     <!-- our team end  -->
+    <!-- brand start  -->
+
     <div class="full-wrapper brand-bg">
-        <div class="container brand"></div>
+        <div class="container brand">
+            <div class="brand-items">
+                <img src="images/hipster.png" alt="hipster">
+            </div>
+            <div class="brand-items">
+                <img src="images/abcd.png" alt="abcd">
+            </div>
+            <div class="brand-items">
+                <img src="images/design-quality.png" alt="design-quality">
+            </div>
+            <div class="brand-items">
+                <img src="images/barbershop.png" alt="barbershop">
+            </div>
+            <div class="brand-items">
+                <img src="images/barber.png" alt="barber">
+            </div>
+            <div class="brand-items">
+                <img src="images/studio.png" alt="studio">
+            </div>
+        </div>
     </div>
+    <!-- brand end  -->
+
+    <!-- our work start  -->
+
+    <div class="full-wrapper our-work-bg">
+        <div class="container our-work">
+            <div class="section-head">
+                <h4><span>w</span>hat we do</h4>
+            </div>
+
+            <div class="work-heading">
+                <h2>some of our work</h2>
+            </div>
+
+            <div class="work-pragraph">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. </p>
+            </div>
+        </div>
+
+    </div>
+    </div>
+
+    <!-- our work end  -->
+
+
+    <!-- our work gallery end  -->
+    <div class="full-wrapper work-bg">
+        <div class="work-gallery-left">
+            <div class="ll-part">
+                <div class="lu">
+                    <img src="images/our-work-img-1.jpg" alt="work-gallery-1">
+                    <div class="overlay">
+                        <div class="image">
+                            <img src="images/photography-2.png" alt="overlay-pic">
+                        </div>
+                        <div class="txt">
+                            <p class="ttu">creatively designed</p>
+                            <p class="ttc">Lorem ipsum dolor sit</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="ld">
+                    <img src="images/our-work-img-5.jpg" alt="work-gallery-5">
+                    <div class="overlay">
+                        <div class="image">
+                            <img src="images/photography-2.png" alt="overlay-pic">
+                        </div>
+                        <div class="txt">
+                            <p class="ttu">creatively designed</p>
+                            <p class="ttc">Lorem ipsum dolor sit</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="r-part">
+                <div class="ru">
+                    <img src="images/our-work-img-2.jpg" alt="work-gallery-2">
+                    <div class="overlay">
+                        <div class="image">
+                            <img src="images/photography-2.png" alt="overlay-pic">
+                        </div>
+                        <div class="txt">
+                            <p class="ttu">creatively designed</p>
+                            <p class="ttc">Lorem ipsum dolor sit</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="rd">
+                    <img src="images/our-work-img-6.jpg" alt="work-gallery-6">
+                    <div class="overlay">
+                        <div class="image">
+                            <img src="images/photography-2.png" alt="overlay-pic">
+                        </div>
+                        <div class="txt">
+                            <p class="ttu">creatively designed</p>
+                            <p class="ttc">Lorem ipsum dolor sit</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="work-gallery-right">
+            <div class="l-part">
+                <img src="images/our-work-img-3.jpg" alt="work-gallery-3">
+                <div class="overlay">
+                    <div class="image">
+                        <img src="images/photography-2.png" alt="overlay-pic">
+                    </div>
+                    <div class="txt">
+                        <p class="ttu">creatively designed</p>
+                        <p class="ttc">Lorem ipsum dolor sit</p>
+                    </div>
+                </div>
+            </div>
+            <div class="r-part">
+                <div class="ru">
+                    <img src="images/our-work-img-4.jpg" alt="work-gallery-4">
+                    <div class="overlay">
+                        <div class="image">
+                            <img src="images/photography-2.png" alt="overlay-pic">
+                        </div>
+                        <div class="txt">
+                            <p class="ttu">creatively designed</p>
+                            <p class="ttc">Lorem ipsum dolor sit</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="rd">
+                    <img src="images/our-work-img-7.jpg" alt="work-gallery-7">
+                    <div class="overlay">
+                        <div class="image">
+                            <img src="images/photography-2.png" alt="overlay-pic">
+                        </div>
+                        <div class="txt">
+                            <p class="ttu">creatively designed</p>
+                            <p class="ttc">Lorem ipsum dolor sit</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="clr"></div>
+
+    <!-- our work gallery end  -->
+    <!-- joshoue  earle start  -->
+    <div class="full-wrapper earle-bg">
+
+        <div class="container earle">
+            <div class="earle-logo">
+                <img src="images/earle-picture.png" alt="earle-logo">
+            </div>
+            <div class="earle-text">
+                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”
+                </p>
+                <h4>joshua earle</h4>
+            </div>
+            <div class="mark-icon">
+                <i class="fas fa-chevron-right right-mark"></i>
+                <i class="fas fa-chevron-left left-mark"></i>
+            </div>
+        </div>
+    </div>
+    <div class="clr"></div>
+    <!-- joshoue  earle end  -->
+    <!-- happy clicent start  -->
+    <div class="full-wrapper happy-clnt-bg">
+        <div class="container happy-clnt">
+            <div class="section-head">
+                <h4><span>h</span>appy we client</h4>
+            </div>
+
+            <div class="clnt-heading">
+                <h2>what people say</h2>
+            </div>
+
+            <div class="clnt-bio">
+                <div class="clnt-nmber">
+                    <div class="clnt-dtls">
+                        <div class="clnt-picture">
+                            <img src="images/happy-client-1.png" alt="happy-client">
+                        </div>
+                        <h4>Matthew Dix</h4>
+                        <span>Graphic Design</span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim.</p>
+                    </div>
+
+                    <div class="clnt-dtls">
+                        <div class="clnt-picture">
+                            <img src="images/happy-client-2.png" alt="happy-client">
+                        </div>
+                        <h4>Matthew Dix</h4>
+                        <span>Jaelynn Castillo</span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim.</p>
+                    </div>
+
+                </div>
+                <div class="clnt-nmber">
+                    <div class="clnt-dtls">
+                        <div class="clnt-picture">
+                            <img src="images/happy-client-3.png" alt="happy-client">
+                        </div>
+                        <h4>Nick Karvounis</h4>
+                        <span>Graphic Design</span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim.</p>
+                    </div>
+                    <div class="clnt-dtls">
+                        <div class="clnt-picture">
+                            <img src="images/happy-client-4.png" alt="happy-client">
+                        </div>
+                        <h4> Mike Petrucci</h4>
+                        <span>Graphic Design</span>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- happy clicent end  -->
+
+    <!-- our blog start-->
+    <div class="full-wrapper blog-bg">
+        <div class="container blog">
+            <div class="section-head">
+                <h4><span>h</span>appy we client</h4>
+            </div>
+            <div class="blog-heading">
+                <h2>what people say</h2>
+            </div>
+            <div class="blog-dtls">
+                <div class="blog-items">
+                    <img src="images/blog-images-01.jpg" alt="blog-images">
+                    <div class="blog-date">
+                        <p><span>15</span> jan</p>
+                    </div>
+                    <div class="blog-text">
+                        <h4>Lorem ipsum dolor sit amet</h4>
+                        <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                            aliqua.</p>
+                    </div>
+                    <div class="blog-icon">
+                        <i class="fas fa-eye"><span>542</span> </i>
+                        <i class="fas fa-comment-dots"><span>17</span></i>
+                    </div>
+
+                </div>
+
+                <div class="blog-items">
+                    <img src="images/blog-images-02.jpg" alt="blog-images">
+                    <div class="blog-date">
+                        <p><span>12</span> jan</p>
+                    </div>
+                    <div class="blog-text">
+                        <h4>sed do eiusmod tempor</h4>
+                        <p>Adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="blog-icon">
+                        <i class="fas fa-eye"><span>992</span> </i>
+                        <i class="fas fa-comment-dots"><span>42</span></i>
+                    </div>
+
+                </div>
+
+                <div class="blog-items">
+                    <img src="images/blog-images-03.jpg" alt="blog-images">
+                    <div class="blog-date">
+                        <p><span>14</span> jan</p>
+                    </div>
+                    <div class="blog-text">
+                        <h4>incididunt ut labore et dolore</h4>
+                        <p>Elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="blog-icon">
+                        <i class="fas fa-eye"><span>1560</span> </i>
+                        <i class="fas fa-comment-dots"><span>98</span></i>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="clr"></div>
+
+    <!-- our blog end-->
+    <!-- map start-->
+    <div class="full-wrapper map-bg">
+        <div class="container map">
+            <i class="fas fa-map-marker-alt"></i>
+            <h4>open map</h4>
+        </div>
+    </div>
+    <!-- map end-->
+    <!-- Footer start-->
+    <div class="full-wrapper footer-bg">
+        <div class="container footer">
+            <div class="footer-logo"></div>
+            <div class="footer-blog"></div>
+            <div class="footer-instagram"></div>
+        </div>
+    </div>
+    <!-- Footer end-->
+
+
 
 </body>
 
